# kgbot-v3

./: README.md  clean_build.sh  docker-compose.yml
models/: README.txt
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: kg-overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
reverse-proxy/: traefik_dynamic.yml
services/api/: Dockerfile
services/api/app/: main.py
services/common/: pyproject.toml  requirements.txt
services/common/kg_common/: config.py  embeddings.py  ingest.py  kg.py  llm.py  query.py  sparql.py  vector.py
services/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
services/web/src/: main.jsx
services/web/src/ui/: App.jsx
services/worker/: Dockerfile
services/worker/app/: worker.py
traefik/: dynamic.yml  traefik.yml
